cleaned up some old mods, fix docs per ruff suggestions & etc

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,10 @@
 __pycache__/
 .pytest_cache
+.ruff_cache/
 .venv/
 .vscode/
 *.html
 *.json
 *.txt
-commands-to-download
-download-bible.sh
-exception_list.md
-list
 local/
-metadata.csv.orig
-python
 tmp
-useful-links
-newWorldTranslation/
